Adding new default-jar execution.

--- a/spring-boot-starter/pom.xml
+++ b/spring-boot-starter/pom.xml
@@ -65,6 +65,10 @@
                         <goals>
                             <goal>jar</goal>
                         </goals>
+                        <configuration>
+                            <skipIfEmpty>false</skipIfEmpty>
+                            <forceCreation>true</forceCreation>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
