--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -69,6 +69,11 @@
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
+                <artifactId>jaxxy-problem-details</artifactId>
+                <version>1.1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-protobuf</artifactId>
                 <version>1.1.0-SNAPSHOT</version>
             </dependency>
