--- a/problem-details/pom.xml
+++ b/problem-details/pom.xml
@@ -25,49 +25,35 @@
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>jaxxy-spring-boot-autoconfigure</artifactId>
+    <artifactId>jaxxy-problem-details</artifactId>
 
-    <name>Jaxxy :: Spring Boot Auto Configuration</name>
+    <name>Jaxxy :: Problem Details</name>
 
     <dependencies>
+
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
-            <version>${spring.boot.version}</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.jaxxy</groupId>
-            <artifactId>jaxxy-gson</artifactId>
-            <optional>true</optional>
-        </dependency>
+
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>org.jaxxy</groupId>
-            <artifactId>jaxxy-problem-details</artifactId>
-            <optional>true</optional>
+            <artifactId>jaxxy-gson</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <version>${spring.boot.version}</version>
-            <optional>true</optional>
+            <groupId>org.jaxxy</groupId>
+            <artifactId>jaxxy-test</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.jaxxy</groupId>
-                <artifactId>jaxxy-bom</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
 </project>
