--- a/spring-boot-autoconfigure/pom.xml
+++ b/spring-boot-autoconfigure/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.jaxxy</groupId>
         <artifactId>jaxxy</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
 
     <artifactId>jaxxy-spring-boot-autoconfigure</artifactId>
@@ -63,7 +63,7 @@
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-bom</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <version>1.1.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
