--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.jaxxy</groupId>
         <artifactId>jaxxy</artifactId>
-        <version>1.1.0</version>
+        <version>1.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jaxxy-bom</artifactId>
@@ -35,88 +35,88 @@
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-cache</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-cors</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-gson</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-guava</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-io</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-jsonb</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-logging</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-problem-details</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-protobuf</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-reactor</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-rx</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-rxjava</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-security</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-spring-boot-autoconfigure</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-spring-boot-starter</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-test</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-util</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
