--- a/spring-boot-starter/pom.xml
+++ b/spring-boot-starter/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.jaxxy</groupId>
         <artifactId>jaxxy</artifactId>
-        <version>1.1.0</version>
+        <version>1.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jaxxy-spring-boot-starter</artifactId>
@@ -38,12 +38,12 @@
         <dependency>
             <groupId>org.jaxxy</groupId>
             <artifactId>jaxxy-spring-boot-autoconfigure</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jaxxy</groupId>
             <artifactId>jaxxy-gson</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
